# newtown-creek

./: .eslintrc.js  .gitattributes  .gitignore  CREATIVECOMMONS  LICENSE  Pipfile  Pipfile.bak  README.md  jsconfig.json  manage.py  notes.md  package-lock.json  package.json  pyproject.toml  requirements.txt
assets/: newtown-creek.ai
assets/templates/: <articles.html
dmtp/: __init__.py  __main__.py  assemble.py  collectors.py  data.py  dmtp.py  metadata.py  schema.py  settings.py  urls.py  util.py  wsgi.py
dmtp/admin_site/: apps.py  filters.py  models.py  site.py
dmtp/settings/: common.py  development.py  production.py
dmtp/utils/: logger.py  template.py
dmtp/web/: about.html  apps.py  audio-draft-2.html  audio-rough-draft.html  audio-scratch.html  ecology-ideas.html  evil-media-classwork-1.html  evil-media-classwork-2.html  final-presentation-draft-1.html  final-presentation.html  gallery-photo-candidates.html  gallery-w3.html  gallery-w4.html  gallery.html  in-class.html  index.html  jq-gallery.html  models.py  post-ideas.html  post-sound-proposal-revised.html  (+23 more)
src/: colors.scss  post-theory-making-2.scss  style-article.scss  style-colorize.scss  style-gallery.scss  style-global.scss  style-index.scss  style-theory-making-2.scss  style.scss
util/: route_map.py
web/: about.html  audio-scratch.html  gallery-photo-candidates.html  gallery-w3.html  gallery-w4.html  ideas.html  index.html  photos.html  post-ideas.html  post-sound-proposal-revised.html  post-sound-proposal.html  post-theory-making-1.html  post-theory-making-2.html  proposals.html  style.css
(+144 files in other folders)
