[tool.poetry]
name = "dmtp"
version = "0.1.0"
description = ""
authors = ["Tony Wu <tony.wu@nyu.edu>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1"
django-extensions = "^3.2.0"
django-filter = "^22.1"
django-storages = "^1.13.1"
simplejson = "^3.17.6"
django-polymorphic = "^3.1.0"
python-decouple = "^3.6"
more-itertools = "^8.14.0"

[tool.poetry.dev-dependencies]
boto3 = "^1.24.66"
ExifRead = "^3.0.0"
termcolor = "^1.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
